--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,10 @@ android {
         dataBinding true
         viewBinding true
     }
+    ndkVersion '16.1.4479499'
     defaultConfig {
         applicationId "cn.darkal.networkdiagnosis"
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 31
         versionName "3.2.31"
@@ -121,4 +122,6 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
     // Json格式化
     implementation 'com.google.code.gson:gson:2.7'
+
+    implementation project(':tracepath')
 }
